# sentinel

./: .gitignore  AGENTS.md  NEWAGENT.md  README.md  benchmark.py  main.py  progress.md  pyproject.toml  requirements-kaggle.txt  requirements.txt
notebooks/: kaggle_setup.md
src/: __init__.py
src/decision/: __init__.py  triage_engine.py
src/pipeline/: __init__.py  main_pipeline.py
src/tracking/: __init__.py  botsort_config.yaml  botsort_config_yolo.yaml  hybrid_tracker.py  mog2_detector.py
src/ui/: __init__.py  app.py
src/vlm/: __init__.py  cuda_compat.py  factory.py  internvl_agent.py  memory.py  schemas.py  tools.py
tests/: __init__.py  test_cuda_compat.py  test_part1_tracking.py  test_part2_triage.py  test_part3_vlm.py  test_part4_pipeline.py  test_part5_pipeline_ui.py  test_part6_dual_res.py  test_part7_runtime_repair.py  test_part7_smolvlm.py
